added animation to save button

--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -71,6 +71,7 @@
         tools:visibility="visible">
 
         <ProgressBar
+            android:alpha="0"
             android:id="@+id/loadingIndicator"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
