--- a/app/src/main/res/layout/hedvig_edit_text.xml
+++ b/app/src/main/res/layout/hedvig_edit_text.xml
@@ -23,9 +23,11 @@
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/base_margin_double"
             android:layout_marginEnd="@dimen/base_margin_double"
+            android:paddingTop="@dimen/base_margin_double"
+            android:paddingBottom="@dimen/base_margin_double"
             android:background="@null"
             android:inputType="numberDecimal"
-            android:singleLine="true"/>
+            android:singleLine="true" />
 
     </FrameLayout>
 
@@ -36,6 +38,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/base_margin_double"
-        tools:text="Hint"/>
+        tools:text="Hint" />
 
 </merge>
