--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -162,5 +162,6 @@
     <dimen name="post_create_z_translation">7dp</dimen>
     <dimen name="key_gear_item_elevation">2dp</dimen>
     <dimen name="horizontal_line_height">1dp</dimen>
+    <dimen name="valuation_card_height">100dp</dimen>
 
 </resources>
