--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -163,5 +163,6 @@
     <dimen name="key_gear_item_elevation">2dp</dimen>
     <dimen name="horizontal_line_height">1dp</dimen>
     <dimen name="valuation_card_height">100dp</dimen>
+    <dimen name="key_gear_item_detail_photos_height">480dp</dimen>
 
 </resources>
