--- a/app/src/main/res/layout/activity_logged_in.xml
+++ b/app/src/main/res/layout/activity_logged_in.xml
@@ -25,7 +25,8 @@
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="@dimen/referrals_button_bottom_margin"
         android:text="@string/REFERRAL_SHAREINVITE"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomTabs"
