--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -97,9 +97,26 @@
         android:layout_height="match_parent"
         android:background="@color/link_purple"
         android:translationZ="@dimen/post_create_z_translation"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
-        <!-- TODO: Use animation assets when available -->
+        <ImageView
+            android:id="@+id/createdIllustration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/base_margin_octuple"
+            android:alpha="0"
+            android:contentDescription="@null"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/createdAnimation"
+            app:layout_constraintEnd_toEndOf="@id/createdAnimation"
+            app:layout_constraintStart_toStartOf="@id/createdAnimation"
+            app:layout_constraintTop_toTopOf="@id/createdAnimation"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:alpha="1"
+            tools:src="@drawable/illustration_phone"
+            tools:visibility="visible" />
+
         <ImageView
             android:id="@+id/createdAnimation"
             android:layout_width="wrap_content"
@@ -112,15 +129,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:src="@drawable/ic_fire_green"
+            app:srcCompat="@drawable/key_gear_post_create_animation"
             tools:visibility="visible" />
 
-        <!-- TODO: Use text key in code when available -->
+        <ImageView
+            android:id="@+id/createdCheckmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0"
+            android:contentDescription="@null"
+            android:translationX="@dimen/base_margin"
+            android:translationY="-8dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/createdIllustration"
+            app:layout_constraintTop_toTopOf="@id/createdIllustration"
+            app:srcCompat="@drawable/ic_filled_checkmark_small"
+            tools:alpha="1"
+            tools:visibility="visible" />
+
         <TextView
             android:id="@+id/createdLabel"
             style="@style/Headline.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0"
             android:textColor="@color/white"
             android:translationY="@dimen/base_margin_triple"
             android:visibility="gone"
@@ -128,6 +160,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/createdAnimation"
+            tools:alpha="1"
             tools:text="@string/KEY_GEAR_ADD_ITEM_SUCCESS"
             tools:visibility="visible" />
 
