--- a/app/src/main/res/layout/key_gear_item_detail_name_section.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_name_section.xml
@@ -3,15 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <TextView style="@style/Headline.Medium"
+    <TextView
+        style="@style/Headline.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_quintuple"
-        android:text="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_TABLE_TITLE"
-        xmlns:android="http://schemas.android.com/apk/res/android" />
+        android:text="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_TABLE_TITLE" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -25,7 +26,7 @@
             style="@style/Body.Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mobiltelefon"
+            tools:text="Mobiltelefon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +39,7 @@
             android:imeOptions="actionDone"
             android:inputType="text"
             android:visibility="gone"
-            app:hintText="Namn"
+            app:hintText="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_TABLE_TITLE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +56,6 @@
             android:text="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_EDIT_BUTTON"
             android:textAllCaps="false"
             android:textColor="@color/link_purple"
-            android:theme="@style/Body.Regular.Link"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -70,7 +70,6 @@
             android:text="Spara"
             android:textAllCaps="false"
             android:textColor="@color/link_purple"
-            android:theme="@style/Body.Regular.Link"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
