--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -17,4 +17,5 @@
     <item name="offer_background" type="color">@color/background</item>
     <item name="foreground_gray" type="color">@color/light_gray</item>
     <item name="icon_color" type="color">@color/white</item>
+    <item name="color_on_surface" type="color">@color/background_elevation_1</item>
 </resources>
