--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
@@ -7,9 +7,38 @@
     android:layout_height="match_parent"
     tools:context=".feature.keygear.ui.createitem.CreateKeyGearItemActivity">
 
-    <include layout="@layout/app_bar" />
+    <LinearLayout
+        android:id="@+id/topBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:elevation="@dimen/top_bar_elevation"
+        android:padding="@dimen/base_margin">
+
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/KEY_GEAR_RECCEIPT_VIEW_CLOSE_BUTTON"
+            android:padding="@dimen/base_margin"
+            android:tint="@color/icon_tint"
+            app:srcCompat="@drawable/ic_back" />
+
+        <TextView
+            android:id="@+id/receipt_title"
+            style="@style/Headline.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/base_margin_triple"
+            android:text="@string/KEY_GEAR_ADD_ITEM_PAGE_TITLE" />
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:paddingTop="@dimen/base_margin"
+        android:clipChildren="false"
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -98,8 +127,7 @@
         android:layout_height="match_parent"
         android:background="@color/off_black_dark"
         android:translationZ="@dimen/post_create_z_translation"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/createdIllustration"
@@ -152,4 +180,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</FrameLayout>
