--- a/app/src/main/res/layout/key_gear_item_detail_photo.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_photo.xml
@@ -17,9 +17,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:contentDescription="@null"
-        app:srcCompat="@drawable/key_gear_item_photo_gradient"
-        android:rotation="180" />
+        app:srcCompat="@drawable/key_gear_item_detail_photo_gradient" />
 
 </FrameLayout>
