--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -165,5 +165,6 @@
     <dimen name="valuation_card_height">100dp</dimen>
     <dimen name="key_gear_item_detail_photos_height">480dp</dimen>
     <dimen name="hedvig_edit_text_padding">14dp</dimen>
+    <dimen name="item_detail_gradient_size">300dp</dimen>
 
 </resources>
