--- a/app/src/main/res/layout/key_gear_item_detail_photo.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_photo.xml
@@ -17,7 +17,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/item_detail_gradient_size"
         android:contentDescription="@null"
         app:srcCompat="@drawable/key_gear_item_detail_photo_gradient" />
 
