--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -37,18 +37,18 @@
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:clipChildren="false"
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/scrollViewContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/base_margin_sextuple">
+            android:paddingTop="@dimen/base_margin"
+            android:paddingBottom="@dimen/base_margin_sextuple"
+            tools:paddingTop="56dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/photos"
@@ -99,12 +99,12 @@
         tools:visibility="visible">
 
         <ProgressBar
-            android:alpha="0"
             android:id="@+id/loadingIndicator"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:alpha="0"
             android:scaleX="0.7"
             android:scaleY="0.7"
             android:visibility="gone" />
