--- a/app/src/main/res/drawable/key_gear_item_detail_photo_gradient.xml
+++ b/app/src/main/res/drawable/key_gear_item_detail_photo_gradient.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
+        android:angle="270"
         android:startColor="#73000000"
         android:endColor="#00000000"
         android:type="linear" />
