--- a/app/src/main/res/values-v29/styles.xml
+++ b/app/src/main/res/values-v29/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Hedvig.Theme.KeyGear.ItemDetail" parent="Hedvig.Theme.KeyGear">
+    <style name="Hedvig.Theme.KeyGear.ItemDetail">
         <item name="android:windowLightStatusBar">false</item>
     </style>
 </resources>
