--- a/app/src/main/res/layout/attach_picker_dialog.xml
+++ b/app/src/main/res/layout/attach_picker_dialog.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_attach_file_height"
         android:layout_gravity="bottom"
+        android:background="@color/background"
         tools:ignore="UselessParent">
 
         <include layout="@layout/loading_spinner" />
